--- a/src/main/src/app/settings/imagesList.scss
+++ b/src/main/src/app/settings/imagesList.scss
@@ -69,6 +69,21 @@
   height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
 }
 
+.images-list-filters {
+  display: flex;
+
+  .input-container {
+    &.mod-filterEmptyImages {
+      margin-left: 20px;
+      width: 180px;
+
+      .label {
+        width: 160px;
+      }
+    }
+  }
+}
+
 .images-list-filter {
   margin-bottom: 10px;
 }
