--- a/src/main/src/app/settings/imagesJson.scss
+++ b/src/main/src/app/settings/imagesJson.scss
@@ -6,7 +6,7 @@
   border: none;
   color: white;
   font-size: 1em;
-  height: calc(#{$settings-tab-height} - 20px);
+  height: calc(#{$settings-tab-height} - 30px);
   line-height: 1.5em;
   margin: 0;
   padding: 10px;
@@ -16,5 +16,12 @@
 
   &:focus {
     outline: none;
+  }
+}
+
+.label {
+  &.mod-json {
+    font-weight: normal;
+    padding: 0 0 15px;
   }
 }
