--- a/src/main/src/app/settings/imagesList.scss
+++ b/src/main/src/app/settings/imagesList.scss
@@ -54,19 +54,25 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
-  .input-filter {
-    margin-bottom: 10px;
-  }
 }
 
 .images-list {
-  border-bottom: $border-default;
-  border-top: $border-default;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
   height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
+
+  &.mod-empty {
+    align-items: center;
+    display: flex;
+    height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
+    justify-content: center;
+  }
+
+  &.mod-not-empty {
+    border-bottom: $border-default;
+    border-top: $border-default;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+  }
 }
 
 .images-list-filters {
@@ -133,4 +139,8 @@
     background-color: white;
     transition: $util-transition;
   }
+}
+
+.input-filter {
+  margin-bottom: 10px;
 }
