wip dropdown menu

--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -13,6 +13,8 @@ $button-primary-border-color: darken(#408BF9, 20%);
 $button-primary-color: #408BF9;
 $button-width: 120px;
 
+$dropdown-menu-background-color: white;
+
 $icon-size: 1.5em;
 $icon-color-disabled: lighten(#878787, 20%);
 $icon-color-danger: red;
