--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -23,9 +23,9 @@ $label-color: black;
 $label-subtext-color: #878787;
 $label-width: 120px;
 
-$row-auto-scrolled-color: lighten(#408BF9, 32%);
 $row-even-color: lighten($border-color, 10%);
 $row-height: 38px;
+$row-highlight-background-color: #408BF9; // lighten(#408BF9, 32%);
 
 $settings-tab-height: 40vh;
 
