--- a/src/main/src/app/layout/dropdown.scss
+++ b/src/main/src/app/layout/dropdown.scss
@@ -20,7 +20,7 @@
     background-color: $dropdown-menu-background-color;
     border-radius: $border-radius;
     border: $border-default;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: $box-shadow;
     cursor: default;
     margin: 10px 0 0;
     padding: 10px;
