--- a/src/main/src/app/layout/tabs.scss
+++ b/src/main/src/app/layout/tabs.scss
@@ -15,7 +15,7 @@
 
 .tab {
   align-items: center;
-  border: $border-weight solid transparent;
+  border: $border-width solid transparent;
   cursor: pointer;
   display: flex;
   height: $row-height;
