--- a/src/main/src/app/settings/imagesList.scss
+++ b/src/main/src/app/settings/imagesList.scss
@@ -61,7 +61,7 @@ $list-height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
 .images-list {
   height: $list-height;
 
-  &.mod-empty {
+  &.is-empty {
     align-items: center;
     display: flex;
     height: $list-height;
@@ -120,7 +120,7 @@ $list-height: calc(#{$settings-tab-height} - #{$row-height} - 20px);
       background-color: $row-even-color;
 
       .input-container {
-        &.mod-focused {
+        &.is-focused {
           .input-icon {
             background-color: white;
           }
