--- a/src/main/src/app/app.scss
+++ b/src/main/src/app/app.scss
@@ -4,7 +4,7 @@ html {
   background-color: $background-loading-color;
   transition: $util-transition;
 
-  &.mod-disabled {
+  &.is-disabled {
     overflow: hidden;
   }
 
