--- a/src/main/src/app/layout/input.scss
+++ b/src/main/src/app/layout/input.scss
@@ -17,11 +17,11 @@ $input-height: calc(#{$row-height} - #{2 * $border-width});
     padding: 0 10px;
   }
 
-  &:hover {
+  &.is-hovering {
     border-color: $border-hover-color;
   }
 
-  &:focus {
+  &.is-focused {
     border-color: $border-focus-color;
     outline: none;
   }
@@ -43,14 +43,14 @@ $input-height: calc(#{$row-height} - #{2 * $border-width});
   position: relative;
   width: 100%;
 
-  &:focus {
+  &.is-focused {
     outline: none;
   }
 
   &.mod-checkbox {
     cursor: pointer;
 
-    &:hover {
+    &.is-hovering {
       .checked-icon {
         &.is-unchecked {
           border-color: $border-hover-color;
@@ -93,17 +93,17 @@ $input-height: calc(#{$row-height} - #{2 * $border-width});
     justify-content: center;
     position: absolute;
     right: $border-width;
-    top: 3px;
+    top: 1px;
   }
 
   .input-command-icon {
     align-items: center;
     cursor: pointer;
     display: flex;
-    height: calc(#{$row-height} - 4px);
+    height: $input-height;
     justify-content: center;
     transition: $util-transition;
-    width: calc(#{$row-height} - 2px);
+    width: $input-height;
 
     &.mod-clear {
       color: $icon-color-disabled;
