--- a/src/main/src/app/tiles/tiles.scss
+++ b/src/main/src/app/tiles/tiles.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: 2em 4em 3em;
 
-  &.mod-disabled {
+  &.is-disabled {
 
     .tile-link {
       filter: $util-blur;
