--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -30,6 +30,7 @@ $label-width: 120px;
 $row-even-color: lighten($border-color, 10%);
 $row-height: 38px;
 $row-highlight-background-color: #408BF9; // lighten(#408BF9, 32%);
+$row-highlight-color: white;
 
 $settings-tab-height: 40vh;
 
