--- a/src/main/src/app/variables.scss
+++ b/src/main/src/app/variables.scss
@@ -24,6 +24,7 @@ $icon-color-danger: red;
 $icon-color-info: #408BF9;
 
 $label-color: black;
+$label-disabled-color: #878787;
 $label-subtext-color: #878787;
 $label-width: 120px;
 
